[B]Version 1.0.1[/B]
- Feature to get i.a from direct link and install.
- Catch error when trying to install modules without i.a
- Add error message for Kodi < 17.0
- Add config
- Improvement in checking for inputstream.adaptive
