@@ -1,4 +1,4 @@
-<?xml version="1.0" ?><addon id="script.module.drmhelper" name="DRM Helper" provider-name="Glenn Guy" version="1.0.1">
+<?xml version="1.0" ?><addon id="script.module.drmhelper" name="DRM Helper" provider-name="Aussie Add-ons" version="1.0.2">
   <requires>
     <import addon="xbmc.python" version="2.1.0"/>
   </requires>
@@ -15,10 +15,24 @@
     <platform>all</platform>
     <license>GNU GENERAL PUBLIC LICENSE Version 3, 29 June 2007</license>
   </extension>
+  <news>[B]Version v1.0.1-2-g6822d91[/B]
+- Update broken inputstream.adaptive zip links
+- update icon
+
+[B]Version v1.0.1[/B]
+- Feature to get i.a from direct link and install.
+- Catch error when trying to install modules without i.a
+- Add error message for Kodi &lt; 17.0
+- Add config
+- Improvement in checking for inputstream.adaptive
+
+[B]Version v1.0.0[/B]
+- Initial version
+</news></extension>
   <news>[B]Version 1.0.1[/B]
 - Feature to get i.a from direct link and install.
 - Catch error when trying to install modules without i.a
-- Add error message for Kodi &#60; 17.0
+- Add error message for Kodi &lt; 17.0
 - Add config
 - Improvement in checking for inputstream.adaptive
 </news>
